--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
     "stories-react": "^1.1.2",
     "yup": "^1.4.0"
