--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-dropdown-select": "^4.11.3",
     "react-icons": "^5.3.0",
+    "react-insta-stories": "^2.7.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
