--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.3.0",
     "react-insta-stories": "^2.7.0",
     "react-quill": "^2.0.0",
+    "react-quill-new": "^3.3.3",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
