--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.3.3",
     "react-redux": "^9.1.2",
+    "react-select": "^5.8.3",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
     "stories-react": "^1.1.2",
