--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "@reduxjs/toolkit": "^2.3.0",
     "emoji-picker-react": "^4.12.0",
     "formik": "^2.4.6",
+    "gif-picker-react": "^1.4.0",
     "next": "15.0.3",
-    "quill": "^2.0.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-dropdown-select": "^4.11.3",
     "react-icons": "^5.3.0",
     "react-insta-stories": "^2.7.0",
-    "react-quill": "^2.0.0",
     "react-quill-new": "^3.3.3",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.3",
