--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-select": "^5.8.3",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "yup": "^1.4.0"
   },
